post-list tag with http request example

--- a/app/views/application/root.html.erb
+++ b/app/views/application/root.html.erb
@@ -2,4 +2,16 @@ Hi, root
 <br><br>
 <%= link_to 'See Posts', posts_path %>
 
-<%= javascript_include_tag 'welcome' %>
+<br><br>------ Begin Riot ------<br><br>
+
+<hello></hello>
+
+<br>
+
+<timer></timer>
+
+<br>
+
+<todo></todo>
+
+<br><br>------ End Riot ------<br><br>
